name:                sharefs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Lupino/sharefs#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag fuse
    description: Fuse file system
    default: True
    manual: False


library
  hs-source-dirs:      src
  exposed-modules:     ShareFS.Client
                     , ShareFS.Internal
                     , ShareFS.Wreq
                     , ShareFS.SimpleStat

  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , aeson
                     , http-client
                     , text
                     , wreq
                     , dispatch-common
                     , lens
                     , unix-time


  if flag(fuse)
    exposed-modules:     ShareFS
                       , ShareFS.FS
                       , ShareFS.FuseOps
    build-depends:       HFuse
                       , unix
                       , filepath
                       , concurrent-extra
                       , unordered-containers

  default-language:    Haskell2010

executable share-fs-server
  hs-source-dirs:      app
  main-is:             share-fs-server.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sharefs
                     , scotty
                     , text
                     , warp
                     , data-default-class
                     , streaming-commons
                     , wai-extra
                     , optparse-applicative
                     , bytestring
                     , http-types
                     , wai
                     , wai-cors

                     , filepath
                     , directory
                     , mime-types
                     , unix-time
  default-language:    Haskell2010

executable share-fs
  if !flag(fuse)
    buildable: False
  hs-source-dirs:      app
  main-is:             share-fs.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  if flag(fuse)
    build-depends:       base
                       , sharefs
                       , bytestring
                       , HFuse
                       , aeson
                       , yaml
                       , optparse-applicative
  default-language:    Haskell2010

test-suite sharefs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sharefs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/sharefs
