name:                share-fs-client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Lupino/sharefs#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ShareFS.Client
                     , ShareFS.Internal
                     , ShareFS.Wreq

  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , aeson
                     , http-client
                     , text
                     , wreq
                     , lens
                     , unix-time
                     , filepath
                     , share-fs-common
                     , yuntan-common-signature

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/sharefs
