name:                share-fs-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Lupino/sharefs#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable share-fs-server
  hs-source-dirs:      src
  main-is:             share-fs-server.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , share-fs-common
                     , scotty
                     , text
                     , warp
                     , data-default-class
                     , streaming-commons
                     , wai-extra
                     , optparse-applicative
                     , bytestring
                     , http-types
                     , wai
                     , wai-cors

                     , filepath
                     , directory
                     , mime-types
                     , unix-time

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/sharefs
